# FastIE

./: .gitignore  MODELS.md  README.md  pyproject.toml  requirements.txt  server.py  setup.py
docs/: README.md  requirements-docs.txt
docs/source/: conf.py  generate_examples.py  index.rst
docs/source/_static/: custom.js
docs/source/getting_started/: installation.rst
examples/adversarial_training/: fgm.yaml
examples/event_extraction/: README.md  evaluate.py  gplinker.yaml
examples/named_entity_recognition/: README.md  cnn.yaml  crf.yaml  evaluate.py  global_pointer.yaml  span.yaml  tplinker.yaml  w2ner.yaml
examples/relation_extraction/: README.md  casrel.yaml  evaluate.py  gplinker.yaml  grte.yaml  pfn.yaml  tplinker.yaml
examples/text_classification/: README.md  evaluate.py  fc.yaml  train_mdp.py
examples/uie/: README.md  doccano.py  uie.yaml
fastie/: __init__.py  cli.py
fastie/api/: __init__.py  app.py  common.py  protocol.py
fastie/data/: __init__.py  event_extraction.py  named_entity_recognition.py  relation_extraction.py  text_classification.py
fastie/data/uie/: __init__.py  augmenter.py  doccano.py  infer.py  utils.py
fastie/extras/: __init__.py  adversarial.py  constants.py  env.py  logging.py  plot.py
fastie/hparams/: __init__.py  data_args.py  finetune_args.py  infer_args.py  model_args.py  parser.py
fastie/metrics/: __init__.py  base.py
fastie/metrics/extraction/: __init__.py  precision_recall_fscore.py  score.py  (+1 more)
fastie/train/: __init__.py  callbacks.py  trainer.py  tuner.py  workflow.py
fastie/webui/: interface.py  utils.py
(+93 files in other folders)
