[tool.poetry]
name = "fastie"
version = "1.0.0"
description = "Easy-to-use Information Extraction Framework"
authors = ["15797687258@163.com"]
readme = "README.md"


[tool.ruff]
target-version = "py38"
line-length = 119
indent-width = 4


[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]


[tool.ruff.lint.isort]
lines-after-imports = 2


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"